last-digit misalignment fixed

--- a/scss/pages/_trade.scss
+++ b/scss/pages/_trade.scss
@@ -61,7 +61,7 @@
 					}
 					.col {
 						padding: 0;
-						margin-left: 2%;
+						margin: 0 1%;
 						display: flex;
 						flex-grow: 1;
 						flex-direction: column;
